gccida/g1/mark_set_regs
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/caller-save.c:958:29: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
for ( v5.rtwint = ( __int64)insn[3].fld[0]; v5.rtwint; v5.rtwint = *( __int64 *)( v5.rtwint + 16) ) 
                            ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/caller-save.c:965:31: error: expected expression
mark_set_1( pbi, SET, *( rtx *)( v5.rtwint + 8), rtx, insn, pbi->flags); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/caller-save.c:965:64: error: incomplete definition of type 'struct propagate_block_info'
mark_set_1( pbi, SET, *( rtx *)( v5.rtwint + 8), rtx, insn, pbi->flags); 
                                                            ~~~^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/basic-block.h:595:8: note: forward declaration of 'struct propagate_block_info'
struct propagate_block_info;
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/caller-save.c:978:20: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
mark_set_1( pbi, ( rtx_code)v8, v3->fld[0].rtx, v7, insn, pbi->flags); 
                   ^~~~~~~~
                   rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/caller-save.c:978:29: error: expected ')'
mark_set_1( pbi, ( rtx_code)v8, v3->fld[0].rtx, v7, insn, pbi->flags); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/caller-save.c:978:11: note: to match this '('
mark_set_1( pbi, ( rtx_code)v8, v3->fld[0].rtx, v7, insn, pbi->flags); 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/caller-save.c:984:12: error: expected ';' after expression
v3 = ( rtx)v3[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/caller-save.c:998:30: error: use of undeclared identifier 'to'
fancy_abort( ( const char *)&to, 2468, "mark_set_regs"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/caller-save.c:1003:20: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
mark_set_1( pbi, ( rtx_code)v11, *( ( rtx *)v10 + 1), v7, insn, pbi->flags); 
                   ^~~~~~~~
                   rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/caller-save.c:1003:29: error: expected ')'
mark_set_1( pbi, ( rtx_code)v11, *( ( rtx *)v10 + 1), v7, insn, pbi->flags); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/caller-save.c:1003:11: note: to match this '('
mark_set_1( pbi, ( rtx_code)v11, *( ( rtx *)v10 + 1), v7, insn, pbi->flags); 
          ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/mark_set_regs/src/obj/caller-save.o] Error 1
